--- a/代码/RELEASE/AR360/Ar360_VS2010.vcxproj
+++ b/代码/RELEASE/AR360/Ar360_VS2010.vcxproj
@@ -20,7 +20,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -46,6 +46,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>mk3;irr;$(IncludePath)</IncludePath>
+    <LibraryPath>mk3;irr;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -80,15 +82,20 @@
   <ItemGroup>
     <ClInclude Include="ALL_PAGE.h" />
     <ClInclude Include="ArNode.h" />
+    <ClInclude Include="BrowseDir.h" />
     <ClInclude Include="Mk3Tex.h" />
     <ClInclude Include="Page.h" />
+    <ClInclude Include="PageRecomm.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArNode.cpp" />
+    <ClCompile Include="BrowseDir.cpp" />
     <ClCompile Include="Page.cpp" />
     <ClCompile Include="PageBuy.cpp" />
+    <ClCompile Include="PageChest.cpp" />
     <ClCompile Include="PageDress.cpp" />
     <ClCompile Include="PageIndex.cpp" />
+    <ClCompile Include="PageMaker.cpp" />
     <ClCompile Include="PageRecomm.cpp" />
     <ClCompile Include="PageShare.cpp" />
     <ClCompile Include="PageTest3D.cpp" />
